feat: Add tab navigation for Token and Wallet analyzers
Added visible tab buttons to switch between:
- Token Safety Score (🔍 Tokens)
- Wallet Analyzer (💼 Wallets)

Previously both features existed but the Wallet tab wasn't visible/switchable.
Now users can clearly see and click between the two features.

Tab styling:
- Blue underline for active tab
- Smooth transitions
- Professional look matching extension theme

--- a/sidebar.html
+++ b/sidebar.html
@@ -21,6 +21,12 @@
         <span class="status-text" id="statusText">Checking...</span>
       </div>
 
+      <!-- Tab Navigation -->
+      <div class="tab-nav">
+        <button class="tab-btn active" data-tab="tokenTab">🔍 Tokens</button>
+        <button class="tab-btn" data-tab="walletTab">💼 Wallets</button>
+      </div>
+
       <!-- Main Content -->
       <main class="main-content">
         <!-- Token Safety Tab -->
