--- a/sidebar.html
+++ b/sidebar.html
@@ -67,55 +67,76 @@
 
         <!-- Trade/Swap Tab -->
         <section class="tab-content" id="tradeTab">
-          <h2 class="tab-title">💱 Trade Tokens</h2>
+          <h2 class="tab-title">💱 AI Trade Assistant</h2>
 
+          <!-- AI Command Input -->
           <div class="input-group">
-            <label for="fromTokenInput">From Token (Address)</label>
+            <label for="commandInput">Natural Language Command</label>
             <input
               type="text"
-              id="fromTokenInput"
-              placeholder="0x... or WETH"
-              class="input-field"
+              id="commandInput"
+              placeholder="e.g., 'Swap 0.01 ETH for USDC' or 'Trade 5 USDC to WETH'"
+              class="input-field command-input"
             />
+            <small class="help-text">💡 Tell the AI what you want to do, it will parse it for you!</small>
           </div>
 
-          <div class="input-group">
-            <label for="amountInput">Amount</label>
-            <input
-              type="number"
-              id="amountInput"
-              placeholder="0.01"
-              class="input-field"
-              step="0.0001"
-            />
-          </div>
+          <button id="parseCommandBtn" class="btn btn-secondary">🤖 Parse Command</button>
 
-          <div class="input-group">
-            <label for="toTokenInput">To Token (Address)</label>
-            <input
-              type="text"
-              id="toTokenInput"
-              placeholder="0x... or USDC"
-              class="input-field"
-            />
-          </div>
+          <!-- Standard Form (Filled by AI) -->
+          <div class="form-section" id="formSection" style="display: none">
+            <h3 class="section-title">Parsed Trade Details</h3>
 
-          <div class="input-group">
-            <label for="platformSelect">DEX Platform</label>
-            <select id="platformSelect" class="input-field">
-              <option value="uniswap">Uniswap V3</option>
-            </select>
-          </div>
+            <div class="input-group">
+              <label for="fromTokenInput">From Token</label>
+              <input
+                type="text"
+                id="fromTokenInput"
+                placeholder="0x... or WETH"
+                class="input-field"
+              />
+            </div>
 
-          <button id="getQuoteBtn" class="btn btn-primary">Get Quote</button>
+            <div class="input-group">
+              <label for="amountInput">Amount</label>
+              <input
+                type="number"
+                id="amountInput"
+                placeholder="0.01"
+                class="input-field"
+                step="0.0001"
+              />
+            </div>
+
+            <div class="input-group">
+              <label for="toTokenInput">To Token</label>
+              <input
+                type="text"
+                id="toTokenInput"
+                placeholder="0x... or USDC"
+                class="input-field"
+              />
+            </div>
+
+            <div class="input-group">
+              <label for="platformSelect">DEX Platform</label>
+              <select id="platformSelect" class="input-field">
+                <option value="uniswap">Uniswap V3</option>
+              </select>
+            </div>
+
+            <button id="getQuoteBtn" class="btn btn-primary">Get Quote</button>
+          </div>
 
           <div class="swap-preview" id="swapPreview" style="display: none">
+            <h3 class="section-title">Quote & Analysis</h3>
+
             <div class="preview-row">
               <span class="preview-label">Expected Output:</span>
               <span class="preview-value" id="expectedOutput">-</span>
             </div>
             <div class="preview-row">
-              <span class="preview-label">Min Received (0.5% slippage):</span>
+              <span class="preview-label">Min Received:</span>
               <span class="preview-value" id="minReceived">-</span>
             </div>
             <div class="preview-row">
@@ -125,6 +146,27 @@
             <div class="preview-row">
               <span class="preview-label">Price Impact:</span>
               <span class="preview-value" id="priceImpact">-</span>
+            </div>
+
+            <!-- AI Recommendations Section -->
+            <div class="ai-recommendations" id="aiRecommendations" style="display: none">
+              <h3 class="section-title">🤖 AI Recommendations</h3>
+              <div class="recommendation-item" id="gasOptimization" style="display: none">
+                <span class="recommendation-title">⚡ Gas Optimization</span>
+                <span class="recommendation-text" id="gasOptText"></span>
+              </div>
+              <div class="recommendation-item" id="riskWarning" style="display: none">
+                <span class="recommendation-title">⚠️ Risk Alert</span>
+                <span class="recommendation-text" id="riskWarnText"></span>
+              </div>
+              <div class="recommendation-item" id="liquidityInfo" style="display: none">
+                <span class="recommendation-title">💧 Liquidity Analysis</span>
+                <span class="recommendation-text" id="liquidityText"></span>
+              </div>
+              <div class="recommendation-item" id="timingAdvice" style="display: none">
+                <span class="recommendation-title">⏰ Timing Advice</span>
+                <span class="recommendation-text" id="timingText"></span>
+              </div>
             </div>
           </div>
 
